--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@
 		position: absolute;
 		bottom: -5px;
 		left: 0;
-		background-color: #000000;
+		background-color: var(--primary-text-color);
 	}
 }
 
